# persuade-us-mistral

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  entrypoint.sh
backend/: main.py  pyproject.toml
backend/notebooks/: test.ipynb
backend/routes/: characters.py  leaderboard.py  levels.py  messages.py  player.py
backend/src/mistral_chat_game/database/: __init__.py  database.py  models.py
backend/src/mistral_chat_game/models/: __init__.py  models.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatGame.jsx  GameOverlay.jsx  HowToPlay.jsx  Leaderboard.jsx  MessageBubble.jsx  PhoneFrame.jsx  PlayerSetup.jsx  ThemeContext.js
frontend/src/utils/: exportConversationGif.js
