[project]
name = "mistral-chat-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.134.0",
    "huggingface-hub>=1.5.0",
    "mistralai>=1.12.4",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
]

[tool.uv]
package = true 

[tool.uv.sources]
mistral-chat-game = { workspace = true }

[tool.uv.workspace]
members = [
    ".",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "mistral-chat-game",
]
